--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,23 @@
     background-color: black;
     color: white;
 }
+
+form {
+    margin: 10px;
+    width: 500px;
+    
+}
+
+.signup-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
+.login-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
