--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,19 +7,23 @@
 form {
     margin: 10px;
     width: 500px;
-    
+
 }
 
-.signup-form{
+.signup-form {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 
-.login-form{
+.login-form {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.custom-header {
+    text-align: center;
 }
