--- a/client/src/index.css
+++ b/client/src/index.css
@@ -163,6 +163,19 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
+
+}
+
+.profilePageUser {
+  background-color: gray;
+  width: 50%;
+  height: auto;
+  border-radius: 15px;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .profile-page h1 {
@@ -177,7 +190,7 @@ form {
 
 .profile-page button {
   align-items: center;
-  background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+  background-image: linear-gradient(144deg, #FF1414, #74D680 50%, #C6EFFF);
   border: 0;
   border-radius: 8px;
   box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
@@ -229,24 +242,28 @@ form {
 
 .wishlist {
   list-style: none;
-  margin: 0;
-  padding: 0;
+  margin: 2px;
+  padding: 2px;
   color: red;
+
 }
 
 .wishlist li {
   display: flex;
-  align-items: center;
   margin: 10px 0;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   color: red;
+  align-items: center;
+  justify-content: space-between;
+  align-content: center;
+  flex-direction: row;
 }
 
 .wishlist button {
   align-items: center;
-  background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+  background-image: linear-gradient(144deg, #FF1414, #74D680 50%, #C6EFFF);
   border: 0;
   border-radius: 8px;
   box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
